# X-CAVATE

./: .gitignore  Dockerfile  LICENSE  README.md  calibration.py  calibration_validation.py  command_line_writer.py  environment.yml  generate_6robot_viz.py  pyproject.toml  render_6robot_mp4.py  test_multi_ctr_6robots.py  xcavate.py
.streamlit/: config.toml
Vascular Trees Verification/: network_0_b_splines_500_vessels (1).txt  network_0_b_splines_500_vessels (1)_synth_inletoutlet.txt
Vascular Trees Verification/CNET Network/: cnet_inlet_outlet_100.txt  cnet_network_0_b_splines_100_points.txt
Vascular Trees Verification/Figure 2 (A-C), Figure 4 (G)/: Note on File Naming.docx  multimaterial_test_network_61_vessels.txt  multimaterial_test_network_61_vessels_inletoutlet.txt
docs/: cli_api_reference.docx  cli_api_reference.tex  original_refactor_report.tex  protocol.md  protocol.tex  refactoring_report.tex  user_guide.tex
docs/refactor_reports/: ctr_algorithms_report.tex  (+4 more)
inputs/: inputs_readme.md
outputs/: outputs_readme.md
tests/: conftest.py  stress_test_ctr_500v.py  test_ctr_collision.py  test_ctr_gcode.py  test_ctr_kinematic_analysis.py  test_ctr_kinematics.py  test_ctr_pipeline.py  test_gap_closure.py  test_gcode.py  test_gimbal_solver.py  test_gimbal_stress.py  test_graph.py  test_inlet_outlet_remap.py  test_multimaterial.py  test_pathfinding.py  test_plotting.py  test_preprocessing.py  test_stress_edge_cases.py  test_subdivide_by_material_swap_order.py  test_swept_volume.py
xcavate/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
(+100 files in other folders)
