[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "xcavate"
version = "2.0.0"
description = "Convert vascular network geometries into collision-free 3D printer toolhead pathways"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "plotly>=5.0",
    "matplotlib>=3.5",
    "prompt_toolkit",
]

[project.optional-dependencies]
gui = ["streamlit>=1.20"]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]
all = ["xcavate[gui,dev]"]

[project.scripts]
xcavate = "xcavate.cli:main"

[tool.setuptools.packages.find]
include = ["xcavate*"]
